          files when running the startup script.
        - Build process now uses standard autoconf/automake structure.
    ENGINE:
        Class NCensus:
            - Redesigned to do its work through classes NFacePairing and
              NGluingPerms.
            - Added support for arbitrary criterion functions.
            - Added support for splitting a census into pieces.
        Class NFacePairing, NGluingPerms:
            - Added to bear the brunt of census generation.
            - Massive optimisations throughout census code.
        Class NIndexedArray:
            - Added routine validate().
        Class NLensSpace, NSFS:
            - Added getCommonName().
        Class NPerm:
            - Routine isIdentity() now implemented in C++ engine.
        Class NTriangulation:
            - Fixed idealToFinite() which was newly broken in Regina 3.0.
            - Routine simplifyToLocalMinimum() now make boundary moves last
              and does not do book opening at all.
            - Routine intelligentSimplify() now tries random 4-4 moves
              and book opening moves.
            - Fixed bug in 2-3, 3-2 and 4-4 moves that appears when faces of
              the old tetrahedra are glued to each other.
        Routine reducedMod():
            - Fixed bug in the midpoint case.
        File nhashmap.h, nhashset.h:
            - Added to deal with differing STL extension installations.
        File nknownmanifold.h:
            - Added global 3-manifold recognition routines.
        File nperm.h:
            - New arrays allPermsS2Inv, allPermsS3Inv, allPermsS4Inv.
    JAVA USER INTERFACE:
        normal.packetui.surfaces.NSFPropertiesEditor:
            - Don't enforce Euler characteristic <= 2 (singular surfaces
              can give other values).
    UTILITIES:
        tricensus:
            - Completely redesigned interface (now command-line based).
            - Supports splitting a census into pieces.
