@@ -12,7 +12,7 @@ mathsincludedir = $(pkgincludedir)/maths
 
 noinst_LTLIBRARIES = libmaths.la
 
-libmaths_la_SOURCES = matrixops.cpp numbertheory.cpp
+libmaths_la_SOURCES = matrixops.cpp nray.cpp numbertheory.cpp
 
-mathsinclude_HEADERS = matrixops.h nmatrix.h nmatrixfield.h nmatrixint.h numbertheory.h nvector.h nvectordense.h nvectormatrix.h nvectorunit.h
+mathsinclude_HEADERS = matrixops.h nmatrix.h nmatrixfield.h nmatrixint.h nray.h numbertheory.h nvector.h nvectordense.h nvectormatrix.h nvectorunit.h
 
