@@ -20,6 +20,8 @@ Version 3.1  [ (under development) ]
               NGluingPerms.
             - Added support for arbitrary criterion functions.
             - Added support for splitting a census into pieces.
+        Class NConeRay:
+            - Removed in favour of new class NRay.
         Class NFacePairing, NGluingPerms:
             - Added to bear the brunt of census generation.
             - Massive optimisations throughout census code.
@@ -37,6 +39,10 @@ Version 3.1  [ (under development) ]
               and book opening moves.
             - Fixed bug in 2-3, 3-2 and 4-4 moves that appears when faces of
               the old tetrahedra are glued to each other.
+        Class NRay:
+            - Added to replace old class NConeRay.
+        Class NVector:
+            - Added negate().
         Routine reducedMod():
             - Fixed bug in the midpoint case.
         File nhashmap.h, nhashset.h:
